syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "io.kneo.core.grpc.service.messaging";
option java_outer_classname = "MessagingGrpcServicesOuter";

package keypractica.system;

message MessagingProto {
  string id = 1;
  string status = 2;
}

/*message GetUserRequest {
  string id = 1;
}

message AddUserRequest {
  UserProto user = 1;
}

message UpdateUserRequest {
  UserProto user = 1;
}*/

service EmailService {
  rpc SendTestMessage (google.protobuf.Empty) returns (MessagingProto);
  //rpc GetUser (GetUserRequest) returns (UserProto);
  //rpc AddUser (AddUserRequest) returns (google.protobuf.Empty);
  //rpc UpdateUser (UpdateUserRequest) returns (UserProto);
}


